--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-project-template",
+  "name": "react-native-pdf417-reader",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "expo": "^30.0.1",
+    "link": "^0.1.5",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-camera": "^1.3.0",
+    "react-navigation": "^2.17.0"
   }
 }
