--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "init",
-    "description": "This project is really great.",
-    "slug": "init",
+    "name": "PDF417 Decoder",
+    "description": "Simple app to decode PDF417 barcodes",
+    "slug": "pdf417-decoder",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mobydigital.pdf417reader"
+    },
+    "android": {
+      "package": "com.mobydigital.pdf417reader"
     }
   }
 }
