--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "expo": "^30.0.1",
+    "firebase": "^5.5.2",
     "link": "^0.1.5",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-camera": "^1.3.0",
+    "react-native-firebase": "^5.0.0",
     "react-native-user-avatar": "^1.0.3",
     "react-navigation": "^2.17.0"
   }
